[Fix] Pull 후 에러 수정